tests/ui/typeck/issue-114918/const-in-fn-return-type.stderr
error[E0308]: mismatched types
  --> $DIR/const-in-fn-return-type.rs:6:21
   |
LL | fn func() -> [u8; { () } ] {
   |                     ^^ expected `usize`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
